--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <!-- page content -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
+    <script src='src/state.js'></script>
   </body>
 </html>
