--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+    <title>GAME TIME!</title>
+    <link rel="stylesheet" href="styles/style.css">
+  </head><header>
+SO YOU WANT TO BE AN ADVISOR?
+  </header>
   <body>
-    <!-- page content -->
+    <section>
+Stocks
+    </section>
+    <section>
+      My Portfolio
+
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
     <script src='src/state.js'></script>
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
   </body>
+</section>
+<footer>Score</footer>
 </html>
