adding flex for css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@ SO YOU WANT TO BE AN ADVISOR?
     <section>
 Stocks
     </section>
-    <section>
-      My Portfolio
-
+    <section class=portfolio>
+      <h2>Client Portfolio</h2>
+        <p>Goal</p>
+        <li>OWL</li>
+        <li>FRRET</li>
+        <li>CHIMP</li>
+    </section>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
     <script src='src/state.js'></script>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
   </body>
-</section>
-<footer>Score</footer>
+<footer>Score:</footer>
 </html>
