--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>GAME TIME!</title>
     <link rel="stylesheet" href="styles/style.css">
-  </head><header>
-SO YOU WANT TO BE AN ADVISOR?
-  </header>
+  </head>
   <body>
+      <header>
+          SO YOU WANT TO BE AN ADVISOR?
+      </header>
     <section>
 Stocks
     </section>
