--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
+      <script src='src/state.js'></script>
+      <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
       <header>
           SO YOU WANT TO BE AN ADVISOR?
       </header>
@@ -14,14 +17,11 @@ Stocks
     </section>
     <section class=portfolio>
       <h2>Client Portfolio</h2>
-        <p>Goal</p>
+        <p>Goal:</p><img class=risk_number>
         <li>OWL</li>
         <li>FRRET</li>
         <li>CHIMP</li>
     </section>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
-    <script src='src/state.js'></script>
-    <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <footer>Score:</footer>
   </body>
 </html>
