--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   </head>
   <body>
     <!-- page content -->
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
+    <script src="src/utils.js"></script>
+    <script src='src/security.js'></script>
     <script src='src/state.js'></script>
+    <script src='src/view.js'></script>
+    <script src='src/client.js'></script>
+    <script src="src/game.js"></script>
+    <script>
+      window.game = new Game();
+      game.start();
+      game.newClient();
+    </script>
   </body>
 </html>
