--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@ SO YOU WANT TO BE AN ADVISOR?
   </header>
   <body>
     <section>
-Stocks
+<h2> Stocks </h2>
+<li>DOG</li>
+<li>KAT</li>
+<li>BRD</li>
+<li>LZD</li>
     </section>
     <section>
       My Portfolio
