--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ Stocks
     <section class=portfolio>
       <h2>Client Portfolio</h2>
         <p>Goal:</p><img class=risk_number>
-        <li>OWL</li>
-        <li>FRRET</li>
-        <li>CHIMP</li>
+        <li class=security>OWL</li>
+        <li class=security>FRRET</li>
+        <li class=securitys>CHIMP</li>
     </section>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
