--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>GAME TIME!</title>
+    <link rel="stylesheet" href="styles/dragula.css">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <!-- page content -->
-      <header>
-          SO YOU WANT TO BE AN ADVISOR?
-      </header>
+    <header>
+        SO YOU WANT TO BE AN ADVISOR?
+    </header>
+  
     <section>
-Stocks
+      <h2>Available Securities</h2>
+      <ul id="securities">
+
+      </ul>
     </section>
+    
     <section class=portfolio>
       <h2>Client Portfolio</h2>
         <p>Goal</p>
+        <ul id="client-securities">
         <li>OWL</li>
         <li>FRRET</li>
         <li>CHIMP</li>
+      </ul>
     </section>
+    <footer>Score:</footer>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
     <script src="src/utils.js"></script>
@@ -33,6 +42,6 @@ Stocks
       game.start();
       game.newClient();
     </script>
-    <footer>Score:</footer>
+    
   </body>
 </html>
