adding ad revenue

--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
       game.start();
       game.newClient();
     </script>
+    <div class=advertisement>
+      <img src=risk-numbers/5850506.jpg>
+      <img src=risk-numbers/1528548.png>
+      <footer>Here at Evan Pope Dog Escort Services,  Inc.  © , we believe that every dog should experience the maximum pleasure of a walk. We believe that no dog should be left unattended without an escort.</footer>
+    </div>
   </body>
 </html>
