moving the stuff

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <section class=portfolio>
       <h2>Client Portfolio</h2>
 
-        <p>Goal</p>
-        <p>Goal:</p><img class=risk_number>
+        <p>Goal:</p><img class=risk_number />
         <ul id="client-securities">
          <li class=security>OWL</li>
          <li class=security>FRRET</li>
@@ -33,6 +32,7 @@
     <footer>Score:</footer>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
+    <script src="data/csvjson.json" type="text/javascript"></script>
     <script src="src/utils.js"></script>
     <script src='src/security.js'></script>
     <script src='src/state.js'></script>
