--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer>Score:</footer>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
-    <script src="data/csvjson.json" type="text/javascript"></script>
+    <script src="Data/csvjson.json" type="text/javascript"></script>
     <script src="src/utils.js"></script>
     <script src='src/security.js'></script>
     <script src='src/state.js'></script>
