bootstrap fun time

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
     SO YOU WANT TO BE AN ADVISOR?
   </header>
 
-  <div class=container>
-    <div class=row>
-      <div class=col-xs-3>
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
       </div>
-      <div class=col-xs-3>
-        <div id=security-panel>
+      <div class="col-4">
+        <div id="security-panel">
           <h2>Available Securities</h2>
           <ul id="securities">
 
           </ul>
         </div>
       </div>
-      <div class=col-xs-6>
-        <div id=client-panel>
+      <div class="col-5">
+        <div id="client-panel">
           <h2>Client Portfolio</h2>
 
           <p>Goal:</p>
-          <img class=risk_number />
+          <img class="risk_number" />
           <ul id="client-securities">
             <li class=security>OWL</li>
             <li class=security>FRRET</li>
@@ -58,10 +58,9 @@
     game.newClient();
   </script>
   <div class=advertisement>
-    <img src=risk-numbers/5850506.jpg>
-    <img src=risk-numbers/1528548.png>
-    <footer>Here at Evan Pope Dog Escort Services, Inc. © , we believe that every dog should experience the maximum pleasure of a
-      walk. We believe that no dog should be left unattended without an escort.</footer>
+    <img width="350px" src=risk-numbers/5850506.jpg>
+    <img width="350px" src=risk-numbers/1528548.png>
+    <footer>Here at Evan Pope Dog Escort Services, we believe that every dog should experience the maximum pleasure of a walk. We believe that no dog should be left unattended without an escort.</footer>
   </div>
 </body>
 
