--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="col-5">
         <div class="row">
           <div class="col-6">
-            <button class="btn btn-primary">New Client</button>
+            <button class="btn btn-primary" id="new-client-button">New Client</button>
           </div>
           <div class="score col-6">Score: <span class="scoreValue">10000</span> points</div>
         </div>
