--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- page content -->
   <header>
-    SO YOU WANT TO BE AN ADVISOR?
+    ARE YOU SMARTER THAN AN ADVISOR?
   </header>
 
   <div class="container">
@@ -55,7 +55,7 @@
           </div>
 
           <ul id="client-securities">
-            
+
           </ul>
         </div>
       </div>
