client profile stuff

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           </div>
           <div class="row">
             <div class="risk-number col-2">
-              <img src="risk-numbers/r0.svg" />
+              <img id="client-risk-number" src="risk-numbers/r0.svg" />
             </div>
             <div class="client-image col-3">
-              <img src="risk-numbers/r99.svg" />
+              <img id="client-image" src="" />
             </div>
             <div class="col-5">
-              <span id="client-name">Bert Qwerty</span>
+              <span id="client-name"></span>
             </div>
             <div class="col-2">
               <div>Goal:</div>
